# ply

./: Cargo.toml  Makefile  README.md  clippy.toml
benches/: movegen.rs
src/: export.rs  fen.rs  lib.rs  main.rs  movegen.rs  opening.rs  perft.rs  pgn.rs  stats.rs
src/board/: mod.rs
src/cli/: commands.rs  mod.rs  render.rs
src/pgn/: mod.rs  parse.rs  replay.rs  san.rs
tests/: cli.rs  fen_movegen.rs  perft.rs  pgn_stats.rs
tests/fixtures/: mixed_valid_invalid.pgn  sample_games.pgn
