[package]
name = "ply"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Rust chess toolkit for PGN parsing, move generation, and analysis."
repository = "https://github.com/myrseth/ply"

[lib]
name = "ply"
path = "src/lib.rs"

[[bin]]
name = "ply"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "movegen"
harness = false
